--- a/css/advantage.css
+++ b/css/advantage.css
@@ -74,7 +74,7 @@ margin-bottom: 25px;
   max-width: 225px;
   color: var(--black-color-text);
   text-align: center;
-  font-size: clamp(1.125rem, 1.094rem + 0.16vw, 1.25rem);
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 27px;
@@ -122,7 +122,7 @@ margin-bottom: 25px;
     gap: 126px;
   }
   .advantage__group-img-sign {
-    width: 104px;
+    width: 145px;
     height: 104px;  
   }
 }
