--- a/css/footer.css
+++ b/css/footer.css
@@ -10,9 +10,6 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 20px;
-  position: relative;
-  top: -1px;
-  left: -19px;
 }
 
 .footer__made-by {
@@ -72,10 +69,6 @@
     padding: 40px 30px;
   }
 
-  .footer__bunch {
-    padding: 0;
-  }
-
   .footer__logo {
     width: 60px;
     height: 60px;
@@ -83,10 +76,12 @@
 
   .footer__company {
     font-size: 8px;
-    white-space: nowrap;
+    max-width: 89px;
   }
+
   .footer__union {
-    gap: 19px;
+    gap: 44px;
+    text-align: center;
   }
 
   .footer__made-by {
@@ -105,6 +100,13 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+  }
+}
+
+
+@media (max-width: 760px) {
+  .footer__union {
+    gap: 42px; 
   }
 }
 
@@ -150,11 +152,6 @@
 }
 }
 
-@media (max-width: 760px) {
-  .footer__union {
-    gap: 42px; 
-  }
-}
 
 @media (max-width: 320px) {
 
@@ -168,7 +165,7 @@
   }
 
   .footer__union {
-    gap: 100px;
+    gap: 70px;
   }
 
   .footer__logo {
@@ -192,24 +189,22 @@
   }
 
   .footer__made-by {
+    display: block;
     font-size: 12px;
     color: rgba(255, 255, 255, 0.50);
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
+    transform: translateX(-5%);
+    bottom: -9px;
     background-color: #2A2C3F;
     width: 320px;
-    height: 47px;
+    height: 37px;
     text-align: center;
-    vertical-align: bottom;
-    padding-top: 15px;
+    padding-top: 7px;
   }
 
   .footer__company {
     font-size: 8px;
     white-space: wrap;
-    max-width: 87px;
+    max-width: 89px;
   }
-
 }
