--- a/css/header.css
+++ b/css/header.css
@@ -62,13 +62,16 @@
 
 @media (max-width: 720px) {
   .header__contacts {
-    content: "";
+    content: "<a href="tel+79509302893"></a>";
     background: url('../img/phone-footer.svg');
     z-index: 1;
     width: 60px;
     height: 50px;
     background-repeat: no-repeat;
+    margin-top: 7px;
   }
+
+
   .header__call-me {
     display: none;
   }
